@@ -248,14 +248,14 @@
         jQuery(event.target).closest('.action_group.dyn > ul').remove();
       });
 
-      jQuery(document).on('change', 'input.update_form:not(.recordselect), textarea.update_form, select.update_form, .checkbox-list.update_form input:checkbox', function(event) {
+      jQuery(document).on('change', 'input.update_form:not(.recordselect), textarea.update_form, select.update_form, .checkbox-list.update_form input:checkbox', function(event, additional_params) {
         var element = jQuery(this);
         var form_element;
-        var value, additional_params;
+        var value;
         if (element.is(".checkbox-list input:checkbox")) {
           form_element = element.closest('.checkbox-list')
           value = form_element.find(':checked').map(function(item){return $(this).val();}).toArray();
-          additional_params = (element.is(':checked') ? '_added=' : '_removed=') + element.val();
+          if (!additional_params) additional_params = (element.is(':checked') ? '_added=' : '_removed=') + element.val();
         } else {
           value = element.is("input:checkbox:not(:checked)") ? null : element.val();
           form_element = element;
@@ -426,6 +426,14 @@
         if (e.target != this) return;
         var search = $(this).find('form.search');
         if (search.length) ActiveScaffold.focus_first_element_of_form(search);
+      });
+      jQuery(document).on('click', '.active-scaffold form .check-all', function(e) {
+        e.preventDefault();
+        ActiveScaffold.update_all_checkboxes($(this), true);
+      });
+      jQuery(document).on('click', '.active-scaffold form .uncheck-all', function(e) {
+        e.preventDefault();
+        ActiveScaffold.update_all_checkboxes($(this), false);
       });
     });
 
@@ -1157,6 +1165,18 @@
             element.trigger('ajax:error', [xhr, status, error]);
           }
         });
+      },
+
+      update_all_checkboxes: function(button, state) {
+        var lists = button.closest('.check-buttons').parent().find('.checkbox-list'),
+          checkboxes = lists.find(':checkbox'), key = state ? '_added' : '_removed', params;
+        params = checkboxes.filter(state ? ':not(:checked)' : ':checked').map(function() { return key + '[]=' + $(this).val(); }).toArray().join('&');
+        checkboxes.prop('checked', state);
+        if (lists.filter('.draggable-list').length) {
+          var parent = state ? lists.filter('.selected') : lists.filter(':not(.selected)');
+          checkboxes.parent().appendTo(parent);
+        }
+        checkboxes.first().trigger('change', params);
       },
 
       draggable_lists: function(selector_or_elements, parent) {
