@@ -1,14 +1,18 @@
 (function() {
   function enableDraggableLists(element) {
     if (element.hasClass('draggable-list')) return;
+    element.parent().addClass('draggable-lists-container');
     element.addClass('draggable-list');
-    var list_selected = jQuery(element.get(0).cloneNode(false)).addClass('selected');
+    var list_selected = jQuery(element.get(0).cloneNode(false)).addClass('selected'),
+      check_buttons = element.siblings('.check-buttons');
     list_selected.attr('id', list_selected.attr('id') + '_selected').insertAfter(element);
     element.find('input:checkbox').each(function(index, item) {
       var li = jQuery(item).closest('li').addClass('draggable-item');
       li.children('label').removeAttr('for');
       if (jQuery(item).is(':checked')) li.appendTo(list_selected);
     });
+    check_buttons.find('.check-all, .uncheck-all').attr('title', function() { return $(this).text() });
+    element.after(check_buttons);
     var options = {
       hoverClass: 'hover',
       containment: '',
